zecore-async-entrypoint/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: zecore-async-entrypoint
  namespace: payments
spec:
  rules:
    - host: zecore-async-entrypoint-staging.luuna.mx
      http:
        paths:
          - backend:
              service:
                name: zecore-async-entrypoint
                port:
                  number: 80
            path: /v1/
            pathType: ImplementationSpecific
